# connectdeaf-ia

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
ai-api/src/: app.py
ai-api/src/config/: logs.py  settings.py
ai-api/src/data/: documents.json
ai-api/src/infra/: storage.py  vector_database.py
ai-api/src/routes/: certificate.py  chat.py
connectdeaf-faq-api/src/: app.py
connectdeaf-faq-api/src/config/: logs.py  settings.py
connectdeaf-faq-api/src/infra/: vector_database.py
connectdeaf-faq-api/src/routes/: faq.py
connectdeaf-faq-api/src/services/: faq.py
